--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.6",
     "dotenv": "^8.1.0",
     "gatsby": "^2.13.73",
     "gatsby-image": "^2.2.10",
@@ -17,6 +18,7 @@
     "gatsby-plugin-offline": "^2.2.7",
     "gatsby-plugin-react-helmet": "^3.1.4",
     "gatsby-plugin-sharp": "^2.2.13",
+    "gatsby-plugin-styled-components": "^3.1.3",
     "gatsby-plugin-typography": "^2.3.3",
     "gatsby-remark-copy-linked-files": "^2.1.7",
     "gatsby-remark-images": "^3.1.13",
@@ -32,6 +34,7 @@
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
+    "styled-components": "^4.3.2",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
     "typography": "^0.16.19",
