--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-sharp": "^2.2.13",
     "gatsby-plugin-styled-components": "^3.1.3",
     "gatsby-plugin-typography": "^2.3.3",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-copy-linked-files": "^2.1.7",
     "gatsby-remark-images": "^3.1.13",
     "gatsby-remark-prismjs": "^3.3.6",
